--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "puppeteer": "^7.0.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "underscore": "^1.12.0"
+    "underscore": "^1.12.0",
+    "winston": "^3.3.3"
   }
 }
